# PyNIDM

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis  .travis.yml  =0.0.8  =0.2.2  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  docker-compose.yml  paper.bib  paper.md  paper.tex  profiler.py  pyproject.toml  pytest.ini  rest-server.py  setup.cfg  setup.py  test.ttl  tox.ini  working_notes.md
.github/workflows/: codespell.yml  lint.yml  publish.yml  pytest_pynidm.yml  pythonpublish.yml  pythontest.yml  release.yml
NIDMExperiment/: NIDMExperimentAcquisitionObject.py  NIDMExperimentCore.py  NIDMExperimentProject.py  NIDMExperimentSession.py  README.md
NIDMWorkflows/: README.md
docker/: Dockerfile  Dockerfile-datalad  Dockerfile-rest  README.md  build.sh  rest-blaze.py  rest-server.py  rundatalad.sh  rundocker.sh  runrest.sh
docs/: Makefile  REST_API_definition.openapi.yaml  conf.py  index.rst  make.bat
docs/manuscripts/linreg_joss/: paper.bib  paper.md
docs/source/: conf.py  index.rst
fmriprep_example/: fmriprep_data_dictionary.csv  fmriprep_data_dictionary.json  fmriprep_results.csv  fmriprep_results_v2.csv  fmriprep_results_wo_ses_run_task.csv  fmriprep_software_metadata.csv  nidm_with_fmriprep_annotations.json  run.sh  sub-XXX_ses-1_task-rest_bold_fmriprep.tsv
fmriprep_example/bids/: .bidsignore  dataset_description.json  nidm.ttl  nidm.ttl.bak  nidm_only_fmriprep.ttl  participants.json  participants.tsv  task-rest_bold.json
nidm/: __init__.py  version.py
nidm/core/: BIDS_Constants.py  Constants.py  dot.py  provone.py
nidm/core/cde_dir/: ants_cde.ttl  fs_cde.ttl  fsl_cde.ttl
nidm/core/serializers/: __init__.py  provonerdf.py
nidm/core/tests/: test_provone.py
nidm/experiment/: Acquisition.py  AcquisitionObject.py  AssessmentAcquisition.py  AssessmentAcquisitionObject.py  AssessmentObject.py  CDE.py  Core.py  DataElement.py  DemographicsAcquisitionObject.py  DemographicsObject.py  Derivative.py  DerivativeObject.py  MRAcquisition.py  MRAcquisitionObject.py  MRObject.py  NIDMExperimentAcquisitionObject.py  NIDMExperimentCore.py  NIDMExperimentProject.py  NIDMExperimentSession.py  Navigate.py  PETAcquisition.py  PETObject.py  Project.py  Query.py  README.md  Session.py  Utils.py  __init__.py  bids_base.py  bidsmri.py
nidm/experiment/tests/: BIDS_convert.py  create_testfile.py  ds000030.ttl  ds002_single_subj.ttl  read_nidm.py  termsearch.py  test.py  test.ttl  test_experiment.py  test_experiment_basic.py  test_load_nidmowl.py  test_map_vars_to_terms.py  test_navigate.py  test_nidm.ttl  test_queries.py  test_query.py  test_read.ttl
nidm/experiment/tools/: BIDSMRI2NIDM.py  CSV2NIDM.py  MTdemog_aseg_v2.ttl  NIDM2BIDSMRI.py  README.md  agent.ttl  attempted_fix_nidm_linreg.py  bidsmri2nidm.py  caltech.nidm.ttl  click.py  click_main.py  cmu_a.nidm.ttl  condensed.csv  csv2nidm.py  data.csv  ds000030.ttl  ds000030_single_subj.ttl  ds000030_single_subj_read.json  ds000030_single_subj_read.ttl  (+27 more)
nidm/terms/: README.md  nidm-experiment.owl
nidm/workflows/: ProcessExecution.py  ProcessSpecification.py  README.md  __init__.py
pynidm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nidm/: __init__.py  util.py
tests/NIDMExperiment/: test.py
tests/core/: test_provone.py
tests/experiment/: conftest.py  create_testfile.py  read_nidm.py  termsearch.py  test_experiment.py  test_experiment_basic.py  test_map_vars_to_terms.py  test_navigate.py  test_nidm.ttl  test_query.py  test_read_nidm.py  test_read_nidm_export_provenance.py
tests/workflows/: test_workflows.py
(+97 files in other folders)
