[metadata]
name = pynidm
version = attr:nidm.__version__
description = PYNIDM: a Python NIDM library and tools
long_description = file:README.rst
long_description_content_type = text/x-rst
author = INCF-NIDASH developers
author_email = incf-nidash-nidm@googlegroups.com
maintainer = INCF-NIDASH developers
maintainer_email = incf-nidash-nidm@googlegroups.com
license = Apache-2.0
license_files = LICENSE
url = https://github.com/incf-nidash/PyNIDM

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find_namespace:
package_dir =
    =src
include_package_data = True
python_requires = >=3.8
install_requires =
    click
    click-option-group
    cognitiveatlas
    datalad
    etelemetry
    numpy >= 1.16.5
    ontquery ~= 0.2.3
    pandas
    patsy
    prov
    pybids >= 0.12.4
    pydot
    pygithub
    pyld >= 1.0.5, <2.0
    python-dateutil ~= 2.0
    rapidfuzz
    rdflib
    requests
    scikit-learn
    scipy
    statsmodels
    tabulate
    validators

[options.extras_require]
tools =
    matplotlib
    seaborn

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bidsmri2nidm = nidm.experiment.tools.bidsmri2nidm:main
    csv2nidm = nidm.experiment.tools.csv2nidm:main
    nidm_query = nidm.experiment.tools.nidm_query:query
    nidm_utils = nidm.experiment.tools.nidm_utils:main
    pynidm = nidm.experiment.tools.click_main:cli
